[tool.poetry]
name = "glints-exam"
version = "0.1.0"
description = ""
authors = ["francescamille <frances.ventocilla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
pyarrow = "^9.0.0"
user-agents = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
